--- a/styles.css
+++ b/styles.css
@@ -221,6 +221,7 @@ body.dark-mode .project-item {
     display: inline-block;
     background: #333;
     color: #fff;
+    padding-top: 10px;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
